package com.snowlinesoftware.blog.optionalvalues;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class OptionalvaluesApplication {

	public static void main(String[] args) {
		SpringApplication.run(OptionalvaluesApplication.class, args);
	}

}
