@startuml

title __OPTIONALVALUES's Class Diagram__\n

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.Author {
          - id : int
          - name : String
          + getId()
          + getName()
          + setId()
          + setName()
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.Book {
          - id : int
          - price : int
          - title : String
          + getAuthor()
          + getId()
          + getPrice()
          + getTitle()
          + setAuthor()
          + setId()
          + setPrice()
          + setTitle()
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.BookController {
          - fillBooks()
          - searchByTitle()
          - searchByTitle()
          - searchByTitlePrice()
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      interface com.snowlinesoftware.blog.optionalvalues.BookRepository {
          {abstract} + findByTitlePriceAuthor()
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.BookService {
          + addBook()
          + findBooks()
          + findBooksByTitlePrice()
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.OptionalvaluesApplication {
          {static} + main()
      }
    }
  }
  

  com.snowlinesoftware.blog.optionalvalues.Book o-- com.snowlinesoftware.blog.optionalvalues.Author : author
  com.snowlinesoftware.blog.optionalvalues.BookController o-- com.snowlinesoftware.blog.optionalvalues.BookService : bookService
  com.snowlinesoftware.blog.optionalvalues.BookService o-- com.snowlinesoftware.blog.optionalvalues.BookRepository : bookRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
